<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class = ".MyPatientInDataBinding">
        <import type="icu.yardward.com.themvp_architecture.archti_3_mvp_databinding.bean.Bed"></import>
        <variable
            name="bed"
            type="Bed"></variable>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_currentBedNO"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            tools:text="01床"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_textSize_Big"
            android:layout_marginBottom="@dimen/stand_margin_large"
            android:text="@{bed.bedName}"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_patientName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_patientName"
                android:text="@{bed.currentpatient.patientName}"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_patientID"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_patientId"
                android:text="@{bed.currentpatient.patientId}"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_patientAge"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_patientAge"
                android:text="@{String.valueOf(bed.currentpatient.patientAge)}"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_patientInTime"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_inTime"
                android:text="@{bed.currentpatient.inTime}"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_back"
                android:background="@drawable/bg_btn_common_selector"
                android:layout_marginRight="@dimen/stand_margin_large"/>



            <Button
                android:id="@+id/bt_inPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_patientIn"
                android:background="@drawable/bg_btn_common_selector"/>




        </LinearLayout>
        



    </LinearLayout>
</layout>
